[package]
name = "roadblock-td"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {version = "0.15.3", features = ["wayland"]}
bevy-inspector-egui = "0.30.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
