[package]
name = "roadblock-td"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3" }
bevy-inspector-egui = "0.30.0"
bevy_lunex = "0.3.2"
fastrand = "2.3.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Now we need `cargo build --release --no-default-features` for release builds
[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic_linking"]
